<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">SAM Tasks</string>
    <string name="android">Android</string>

    <!--    Google Sign in-->
    <string name="web_client_id" tools:ignore="TypographyDashes">1092810453132-5k6l3jk0dd2k3d1hnfuq8tut354r8ttc.apps.googleusercontent.com</string>

    <!--    Shared Preferences-->
    <string name="shared_preferences_name">sam_preferences</string>
    <string name="continue_without_login_key">continue_without_login</string>
    <string name="geofence_id_key">GEOFENCE_ID</string>

    <!--    Notifications Strings-->
    <string name="geofencing_notification_channel_id">GEOFENCING_CHANNEL_ID</string>
    <string name="geofencing_notification_channel_name">Reminder</string>
    <string name="geofencing_notification_channel_description">This notification channel sends notifications when you enter an area you specified for a task</string>

    <!--    Global-->
    <string name="login">Login</string>
    <string name="signup">Sign-up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="reminder">Reminder</string>

    <!--    Welcome Fragment-->
    <string name="continue_without_login_text">Continue without login</string>

    <!--    Auth Activity-->
    <string name="forgot_password_text">Forgot your password?</string>
    <string name="google_sign_in_text">Sign in with Google</string>
    <string name="reset">Reset</string>

    <!--    Authentication Error messages-->
    <string name="empty_field">This field can\'t be empty</string>
    <string name="email_not_valid">Enter a valid email</string>
    <string name="short_password">Password must be at least 8 chars</string>
    <string name="wrong_password">check your password</string>
    <string name="email_exists">Email already exists</string>

    <!--    Authentication Ui Messages-->
    <string name="sent">Email sent</string>
    <string name="failed_to_reset">Failed to sent Email</string>

    <!--    Home Fragment-->
    <string name="calendar_fab_description">Opens Date selector</string>
    <string name="add_fab_description">Opens screen to add a new task</string>
    <string name="morning_greeting">Good Morning %s</string>
    <string name="afternoon_greeting">Good Afternoon %s</string>
    <string name="evening_greeting">Good Evening %s</string>
    <string name="night_greeting">Good Night %s</string>
    <string name="no_data">No Tasks found</string>

    <!--    Create Task Fragment-->
    <string name="back_button_description">Go back to home without saving task</string>
    <string name="done_fab_description">Confirms task creation and add it to database</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="calender_button_description">Open date selector for editing task\'s date</string>
    <string name="location_button_description">Opens map to select a location for the task, then a location will be sent if location settings is enabled and you reached to location</string>
    <string name="time_button_description">Opens time editor to set a time for the task</string>
    <string name="alarm_button_description">Opens alarm editor to set an alarm for this task</string>
    <string name="explain_permission_title">Location permission required</string>
    <string name="explain_permission_content">This app needs fine location permission to be able to set location to task and send notify in the right time and location</string>
    <string name="explain_permission_refuse">No, Thanks</string>
    <string name="explain_permission_accept">OK</string>
    <string name="prevent_set_location">Can\'t set location while time or date is set</string>
    <string name="prevent_set_time_date">Can\'t set while location is used</string>
    <string name="explain_background_request">This app needs background location access to be able to send notifications at right place</string>

    <!--    Location Fragment-->
    <string name="set_location_fab_description">Saves the current selected location</string>
    <string name="set_layer_button">Opens bottom sheet to choose the map type</string>

    <!--    Map Type Bottom Sheet-->
    <string name="normal">Normal</string>
    <string name="satalite">Satellite</string>
    <string name="hybrid">Hybrid</string>
    <string name="terrain">Terrain</string>

</resources>