<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/normal_text_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="6dp"
        android:text="@string/normal"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/satalite_text_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="6dp"
        android:text="@string/satalite"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/hybrid_text_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="6dp"
        android:text="@string/hybrid"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/terrain_text_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="6dp"
        android:text="@string/terrain"

        android:textSize="24sp" />

</LinearLayout>