<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.project4.ui.fragments.create_edit.CreateTaskViewModel" />

        <variable
            name="fragment"
            type="com.udacity.project4.ui.fragments.create_edit.CreateTaskFragment" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_button_description"
            android:onClick="@{() -> fragment.backWithoutSave()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_back" />

        <EditText
            android:id="@+id/title_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/edit_text_horizontal_margin"
            android:background="@android:color/transparent"
            android:hint="@string/title"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="40dp"
            android:singleLine="true"
            android:text="@={viewModel.title}"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_button" />

        <EditText
            android:id="@+id/content_edit"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/edit_text_horizontal_margin"
            android:background="#00FFFFFF"
            android:gravity="top|start"
            android:hint="@string/content"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:minHeight="60dp"
            android:scrollbars="vertical"
            android:text="@={viewModel.content}"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/bottom_bar_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_edit" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/bottom_bar_card"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/calender_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/calender_button_description"
                android:onClick="@{() -> fragment.showDatePicker()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic_calendar" />

            <ImageButton
                android:id="@+id/location_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/location_button_description"
                android:onClick="@{() -> fragment.showMapPicker()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/calender_button"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic_location" />

            <ImageButton
                android:id="@+id/time_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/time_button_description"
                android:onClick="@{() -> fragment.showTimePicker()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/location_button"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic_clock" />

            <ImageButton
                android:id="@+id/alarm_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/alarm_button_description"
                android:onClick="@{() -> fragment.setAlarm()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/time_button"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic_alarm" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/create_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            android:backgroundTint="@color/secondaryColor"
            android:contentDescription="@string/done_fab_description"
            android:onClick="@{() -> viewModel.createTask()}"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/bottom_bar_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_done"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>