<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.samtasks.ui.fragments.login.LoginViewModel" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.8"
        app:cardCornerRadius="80dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF">

            <TextView
                android:id="@+id/textView2"
                style="@style/TextAppearance.MaterialComponents.Headline2.AuthTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/auth_title_bottom_margin"
                android:text="@string/login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_edit"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.AuthInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/auth_title_bottom_margin"
                android:hint="@string/email"
                app:errorValue="@{viewModel.emailError}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:text="@={viewModel.email}" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_edit"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.AuthInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:errorValue="@{viewModel.passwordError}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_edit">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:text="@={viewModel.password}" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_button_top_margin"
                android:backgroundTint="#C24646"
                android:onClick="@{() -> viewModel.login()}"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="@+id/password_edit"
                app:layout_constraintTop_toBottomOf="@+id/password_edit" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password_text"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/login_button"
                app:layout_constraintStart_toStartOf="@+id/password_edit"
                app:layout_constraintTop_toTopOf="@+id/login_button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signup_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/button_horizontal_margin"
                android:text="@string/signup"
                app:backgroundTint="#FFC24646"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialButton" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/button_horizontal_margin"
                android:layout_marginTop="@dimen/google_button_top_margin"
                android:layout_marginBottom="@dimen/google_button_bottom_margin"
                android:backgroundTint="#EEEEEEEE"
                android:text="@string/google_sign_in_text"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</layout>